@@ -1,0 +1,1 @@
+{"all":{"php":{"display_errors":"1","display_startup_errors":"1","date":{"timezone":"America\/Montreal"}},"front":{"default_controller":"index","error_controller":"error","allow_internal_controllers":"1"},"view":{"setRenderEngine":"Layouts","useLayout":"main","set":{"app":{"name":"PeakDemo","desc":"Peak Demo Description","version":"0.1b"}}}},"development":{"db":{"adapter":"Pdo_Mysql","params":{"host":"localhost","username":"peakapp","password":"peakpass","dbname":"peakdemo"}}},"testing":[],"staging":[],"production":{"php":{"display_errors":"0","display_startup_errors":"0"}}}
